// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-professions-libérales > CIPAV ACRE 1`] = `
"entreprise . chiffre d'affaires: 5940
impôt . montant: undefined
indépendant . cotisations et contributions: 940
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 32
protection sociale . retraite . complémentaire: 19
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 2`] = `
"entreprise . chiffre d'affaires: 26499
impôt . montant: undefined
indépendant . cotisations et contributions: 6499
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19440
protection sociale . retraite . base: 144
protection sociale . retraite . complémentaire: 89
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 3`] = `
"entreprise . chiffre d'affaires: 70434
impôt . montant: undefined
indépendant . cotisations et contributions: 20434
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41381
protection sociale . retraite . base: 347
protection sociale . retraite . complémentaire: 272
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 2`] = `
"entreprise . chiffre d'affaires: 3150
impôt . montant: undefined
indépendant . cotisations et contributions: 1150
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 10
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 3`] = `
"entreprise . chiffre d'affaires: 6634
impôt . montant: undefined
indépendant . cotisations et contributions: 1634
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 22
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 4`] = `
"entreprise . chiffre d'affaires: 12933
impôt . montant: undefined
indépendant . cotisations et contributions: 2933
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
protection sociale . retraite . base: 70
protection sociale . retraite . complémentaire: 43
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 5`] = `
"entreprise . chiffre d'affaires: 144241
impôt . montant: undefined
indépendant . cotisations et contributions: 44241
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73786
protection sociale . retraite . base: 351
protection sociale . retraite . complémentaire: 881
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 6`] = `
"entreprise . chiffre d'affaires: 1272636
impôt . montant: undefined
indépendant . cotisations et contributions: 272636
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528553
protection sociale . retraite . base: 360
protection sociale . retraite . complémentaire: 1532
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 1`] = `
"entreprise . chiffre d'affaires: 86393
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 2`] = `
"entreprise . chiffre d'affaires: 70418
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 3`] = `
"entreprise . chiffre d'affaires: 55665
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"entreprise . chiffre d'affaires: 92594
impôt . montant: undefined
indépendant . cotisations et contributions: 32594
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48238
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 455
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"entreprise . chiffre d'affaires: 91545
impôt . montant: undefined
indépendant . cotisations et contributions: 31545
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48245
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 446
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"entreprise . chiffre d'affaires: 91033
impôt . montant: undefined
indépendant . cotisations et contributions: 31033
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48248
protection sociale . retraite . base: 463
protection sociale . retraite . complémentaire: 441
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"entreprise . chiffre d'affaires: 98716
impôt . montant: undefined
indépendant . cotisations et contributions: 38716
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48199
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 506
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"entreprise . chiffre d'affaires: 95801
impôt . montant: undefined
indépendant . cotisations et contributions: 35801
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48218
protection sociale . retraite . base: 522
protection sociale . retraite . complémentaire: 482
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `
"entreprise . chiffre d'affaires: 2911
impôt . montant: undefined
indépendant . cotisations et contributions: 1911
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
protection sociale . retraite . base: 79
protection sociale . retraite . complémentaire: 10
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 7`] = `
"entreprise . chiffre d'affaires: 92594
impôt . montant: undefined
indépendant . cotisations et contributions: 32594
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48238
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 455
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"entreprise . chiffre d'affaires: 45029
impôt . montant: undefined
indépendant . cotisations et contributions: 5029
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: 34545
protection sociale . retraite . base: 507
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `
"entreprise . chiffre d'affaires: 1341
impôt . montant: undefined
indépendant . cotisations et contributions: 841
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `
"entreprise . chiffre d'affaires: 1956
impôt . montant: undefined
indépendant . cotisations et contributions: 956
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 5
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `
"entreprise . chiffre d'affaires: 2571
impôt . montant: undefined
indépendant . cotisations et contributions: 1071
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 7
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `
"entreprise . chiffre d'affaires: 3185
impôt . montant: undefined
indépendant . cotisations et contributions: 1185
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 10
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `
"entreprise . chiffre d'affaires: 6668
impôt . montant: undefined
indépendant . cotisations et contributions: 1668
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 22
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `
"entreprise . chiffre d'affaires: 12969
impôt . montant: undefined
indépendant . cotisations et contributions: 2969
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
protection sociale . retraite . base: 71
protection sociale . retraite . complémentaire: 43
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"entreprise . chiffre d'affaires: 144454
impôt . montant: undefined
indépendant . cotisations et contributions: 44454
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73784
protection sociale . retraite . base: 351
protection sociale . retraite . complémentaire: 884
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"entreprise . chiffre d'affaires: 1272814
impôt . montant: undefined
indépendant . cotisations et contributions: 272814
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528550
protection sociale . retraite . base: 360
protection sociale . retraite . complémentaire: 1532
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 4`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 5`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 6`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;
